--- a/portfolio/composer.json
+++ b/portfolio/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "user/portfolio",
-    "description": "This is a  protfolio website",
+    "description": "This is a portfolio website",
     "type": "project",
     "license": "MIT",
     "autoload": {
         "psr-4": {
             "App\\": "App/"
         }
-    }, 
+    },
     "authors": [
         {
-            "name": "Md Rashed Miya"
+            "name": "Md Shariful Islam"
         }
     ],
     "minimum-stability": "stable",
@@ -18,4 +18,3 @@
         "nikic/fast-route": "^1.3"
     }
 }
-
